Create products route and template

--- a/views/pages/purchases.ejs
+++ b/views/pages/purchases.ejs
@@ -6,8 +6,7 @@
   <%- include('../partials/nav') %>
 
   <main>
-
-
+    <h1>ERROR: <%= message %></h1>
   </main>
 
   <%- include('../partials/footer') %>
