--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -6,7 +6,7 @@
   <%- include('../partials/nav') %>
   <main>
     <section class="operat-bar">
-      <a class="w3-right btn-add-new btn" href="/product/new">
+      <a class="w3-right btn-add-new btn" href="/products/new">
         <i class="fa fa-plus"></i> NEW
       </a>
       <span class="w3-right search-item btn">SEARCH: 
