--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -13,6 +13,6 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Lobster&family=Urbanist&display=swap" rel="stylesheet">
 
-  <link rel = "stylesheet" href = "css/w3.css">
-  <link rel = "stylesheet" href = "css/style.css">
+  <link rel = "stylesheet" href = "/css/w3.css">
+  <link rel = "stylesheet" href = "/css/style.css">
 </head>
